July 2, 2023 @ 23:10 UTC-6
- Change ZEAL Medic setting to a multi-select that allows only having ZEAL Medics; this update will reset your previously saved ZEAL Medic setting state

April 28, 2023 @ 22:00 UTC-6
- Small code change and version bump

April 26, 2023 @ 13:00 UTC-6
- ZEAL shield will no longer have a faint green glow across the entire model

April 15, 2023
- Add ZEAL Medic texture swap as a setting

March 31, 2023
- Change some back end stuff