@@ -1,3 +1,6 @@
+December 5, 2023 @ 00:00 UTC-6
+- Shouldn't produce errors on startup when playing with Eclipse anymore
+
 July 2, 2023 @ 23:10 UTC-6
 - Change ZEAL Medic setting to a multi-select that allows only having ZEAL Medics; this update will reset your previously saved ZEAL Medic setting state
 
